Prevent event card subtitle word wrap

--- a/src/app/event-card/event-card.component.css
+++ b/src/app/event-card/event-card.component.css
@@ -1,3 +1,10 @@
 mat-card {
     background-color: transparent;
 }
+
+#subtitle {
+    max-width: 85%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
